[package]
name = "dl-solvers"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
feature = ["serde-support"]
tag = "v0.2.6"